# gov

./: .gitignore  CMakeLists.txt  GOV_LANGUAGE_DOCUMENTATION.md  README.md
.github/workflows/: ci.yml
examples/: calculator.gov  hello_world.gov  number_guessing.gov  tic_tac_toe.gov
extension/: README.md  language-configuration.json  package.json
extension/syntaxes/: gov.tmLanguage.json
src/: interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
